# AgentGRIT

./: .env.example  .garden.json  .gitignore  CLAUDE.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  GRIT-LEADER-PLAYBOOK.md  LICENSE  Makefile  QUICKSTART-AGENTS.md  README.md  RELEASE-NOTES.md  RUNBOOK.md  SECURITY.md  docker-compose.yml  grit.py  loops.json  pyproject.toml  start.sh
.github/workflows/: ci.yml
config/: budget.yaml  priorities.yaml
data/: trust_state.json
docs/: AGENT-SCOPE-TEMPLATE.md  ARCHITECTURE.md  DIAGRAMS.md  ESCALATIONS.md  EXAMPLE-BRIEF.md  EXAMPLE-CONSOLE.md  EXAMPLE-LEGAL-RESEARCH.md  EXAMPLE-OBSERVE.md  EXAMPLE-REPO-STEWARD.md  LOGOS-VAULT.md  NOTIFICATIONS.md  OLLAMA-SETUP.md  POSTMORTEM.md  QUICKSTART.md  RELEASE-CHECKLIST.md  SPEC-DRIVEN.md  STATUS.md  VIDEO-CAPABILITY-RUNTIME.md
docs/architecture/: voice-cell.md
scripts/: dashboard.py  gardener.py  install.sh  run_observer.py  setup-mac.sh  smoketest.py  tail_logs.py  test_imports.py
skills/: README.md
skills/example-format/: SKILL.md
src/: __init__.py  config.py  main.py
src/agents/: daily_debrief_agent.py  example_agent.py  grit_agent.py  legal_research_agent.py  repo_steward_agent.py
src/api/: __init__.py  brief_data.py  brief_page.py  console_data.py  console_page.py  desktop.html  server.py
src/bot/: __init__.py  bot_workflow.py  telegram.py  telegram_hardened.py
src/cells/: __init__.py  contract.py
src/database/: __init__.py  models.py
src/evals/: harness.py  runner.py  suite.py
src/execution/: __init__.py  capability_map.py  claude_client.py  competition.py  loops.py  quota_fallback.py  research.py  (+6 more)
tests/: test_api_auth.py  test_autonomy.py  test_autonomy_binding.py  test_brief.py  test_budget_governor.py  test_cells.py  test_competition.py  test_config_and_research_project.py  test_console.py  test_core.py  test_cost_tables_consistent.py  test_daily_debrief.py  test_decision_record.py  test_desktop.py  test_escalation_persistence.py  test_evals.py  test_gardener.py  test_idea_to_project.py  test_integration.py  test_knowledge.py  test_legal_research.py  test_logging_rotation.py  test_logos_vault.py  test_loops.py  test_observe.py  test_pillars.py  test_priority_and_budget_live.py  test_quota_fallback.py  test_redact.py  test_repo_hygiene.py  test_repo_steward.py  test_research_quality.py  test_router_confidence.py  test_sentinel.py  test_skill_discovery.py  test_skill_review.py  test_task_api_honesty.py  test_vault_live_smoke.py  test_verification_block.py  test_video_schema.py  (+2 more)
(+69 files in other folders)
