[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentgrit"
version = "2.0.0"
description = "Governed Recursive Intelligent Taskrunner - Self-governing AI agent orchestration"
readme = "README.md"
license = "FSL-1.1-MIT"
requires-python = ">=3.11"
authors = [
    { name = "OgreScat", email = "dev@agentgrit.local" }
]
keywords = ["ai", "agent", "automation", "telegram", "claude", "ollama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    
    # API Server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    
    # Telegram Bot
    "aiogram>=3.13.0",
    
    # Database
    "aiosqlite>=0.20.0",
    "sqlalchemy[asyncio]>=2.0.30",
    
    # Caching
    "redis>=5.0.0",
    
    # AI/LLM
    "anthropic>=0.32.0",
    "openai>=1.40.0",  # For Ollama compatibility
    
    # Utilities
    "aiofiles>=24.1.0",
    "rich>=13.7.0",
    "structlog>=24.4.0",
    "tenacity>=8.5.0",
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
scraping = [
    # Free/local-first content fetching (evaluated 2026-07-02): markitdown
    # converts arbitrary HTML/files to clean markdown for LLM consumption;
    # crawl4ai does real headless-browser fetches. Verified crawl4ai can reach
    # most public sites directly with a plain fetch, even ones you might assume
    # are anti-bot-blocked. Some JS-rendered pages still don't come through clean
    # (status 202, empty shell) - direct scraping is not a full replacement for
    # Perplexity, just a free-tier-first option for sources it demonstrably works on.
    "markitdown>=0.1.6",
    "crawl4ai>=0.9.0",
]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.8.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
agentgrit = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

# pytest config moved to pytest.ini for pytest-asyncio compatibility
